--- a/.github/workflows/welcome.yaml
+++ b/.github/workflows/welcome.yaml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - run: gh pr comment $PR_URL --body "Welcome to the repository!"
         env:
-          GITHUB_TOKEN: ${{ secrets.NEW_TOKEN }}
+          GITHUB_TOKEN: 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
           PR_URL: ${{ github.event.pull_request.html_url }}
