--- a/.github/workflows/welcome.yaml
+++ b/.github/workflows/welcome.yaml
@@ -10,4 +10,4 @@ jobs:
       - run: gh pr comment $PR_URL --body "Welcome to the repository!"
         env:
           GITHUB_TOKEN: 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
-          PR_URL: ${{ github.event.pull_request.html_url }}
+          PR_URL: https://github.com/Gokul-Zversal/Gokul-Zversal/pull/5
