--- a/.github/workflows/welcome.yaml
+++ b/.github/workflows/welcome.yaml
@@ -1,13 +1,13 @@
-name: Post welcome comment
-on:
-  pull_request:
-    types: [opened]
+name: learn-github-actions
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
 jobs:
-  build:
-    name: Post welcome comment
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - run: gh pr comment $PR_URL --body "Welcome to the repository!"
-        env:
-          GITHUB_TOKEN: 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
-          PR_URL: ${{ github.event.pull_request.html_url }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
