--- a/.github/workflows/welcome.yaml
+++ b/.github/workflows/welcome.yaml
@@ -1,6 +1,9 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on: 
+  push:
+    tags:
+      - 'gokul2.*'
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
